--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -4,6 +4,7 @@ defaults: &defaults
   geoserver_url: /geonetwork
   geocms_url: http://geomap.dotgeeapp.com/
   site_title: Geoauth Instance
+  administrator_emails: bob@example.com
 
 development:
   <<: *defaults
